src/test/ui/type-alias-impl-trait/generic_duplicate_param_use.stderr
error: defining opaque type use restricts opaque type by using the generic parameter `T` twice
  --> $DIR/generic_duplicate_param_use.rs:11:1
   |
LL | / fn one<T: Debug>(t: T) -> Two<T, T> {
LL | |
LL | |     t
LL | | }
   | |_^

error: could not find defining uses
  --> $DIR/generic_duplicate_param_use.rs:8:1
   |
LL | type Two<T, U> = impl Debug;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

